[gd_scene load_steps=5 format=3 uid="uid://bbwhiusxcraa1"]

[ext_resource type="PackedScene" uid="uid://bb26y78ash1eg" path="res://entities/Creature.tscn" id="1_vg2aq"]
[ext_resource type="Script" path="res://entities/Enemy.gd" id="2_dsyds"]
[ext_resource type="Texture2D" uid="uid://bpji2q0mcvt24" path="res://assets/visual/spr_test_enemy.png" id="2_ynike"]
[ext_resource type="Texture2D" uid="uid://cvaxxavh8koky" path="res://assets/visual/icons/alert.png" id="4_dv3if"]

[node name="Enemy" groups=["enemies"] instance=ExtResource("1_vg2aq")]
script = ExtResource("2_dsyds")
reverse_patrol = false
speed = 100.0

[node name="sprite" parent="." index="0"]
texture = ExtResource("2_ynike")

[node name="alert_progress" type="ProgressBar" parent="." index="3"]
offset_left = -56.0
offset_top = -56.0
offset_right = 56.0
offset_bottom = -40.0
max_value = 1.0
step = 0.1
show_percentage = false

[node name="alert_icon" type="Sprite2D" parent="." index="4"]
position = Vector2(0, -96)
texture = ExtResource("4_dv3if")

[node name="state_label" type="Label" parent="." index="5"]
offset_left = -48.0
offset_top = 40.0
offset_right = 40.0
offset_bottom = 66.0
text = "[NOSTATE]"
